# xlsxturbo

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  benchmark.py  benchmark_parallel.py  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py  benchmark_parallel.py
docs/: strategic-recommendations-plan.md
docs/reviews/: 2026-05-14_124318_codebase_deep_mine.md  latest-review.md
python/fast_xlsx/: __init__.py  __init__.pyi
python/fastxlsx/: __init__.py  __init__.pyi
python/xlsxturbo/: __init__.py  __init__.pyi  xlsxturbo.pyi
scripts/: audit-agent-memory.ps1
src/: apply.rs  convert.rs  extract.rs  features.rs  lib.rs  main.rs  parse.rs  types.rs  workbook.rs  write.rs
src/apply/: annotations.rs  cells.rs  charts.rs  conditional_formats.rs  dimensions.rs  formulas.rs  media.rs  rich_text.rs  sparklines.rs  validations.rs
src/parse/: cell_refs.rs  colors.rs  formats.rs  mod.rs  patterns.rs  tables.rs  values.rs
tests/: __init__.py  cli.rs  conftest.py  helpers.py  test_annotations.py  test_api_surface.py  test_cells.py  test_conditional_formats.py  test_constant_memory.py  test_core.py  test_error_paths.py  test_features.py  test_formatting.py  test_formulas.py  test_integration.py  test_media.py  test_option_coverage.py  test_v060_features.py  test_validations.py  test_version.py
