[package]
name = "xlsxturbo"
version = "0.1.0"
edition = "2021"
description = "High-performance CSV to XLSX converter with automatic type detection"
license = "MIT"
repository = "https://github.com/tstone-1/xlsxturbo"
keywords = ["excel", "xlsx", "csv", "converter", "performance"]
categories = ["command-line-utilities", "encoding"]

[lib]
name = "xlsxturbo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xlsxturbo"
path = "src/main.rs"

[dependencies]
rust_xlsxwriter = "0.79"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
