[package]
name = "xlsxturbo"
version = "0.10.1"
edition = "2021"
description = "High-performance Excel writer with automatic type detection (pandas, polars, CSV)"
license = "MIT"
repository = "https://github.com/tstone-1/xlsxturbo"
keywords = ["excel", "xlsx", "csv", "converter", "performance"]
categories = ["command-line-utilities", "encoding"]

[lib]
name = "xlsxturbo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xlsxturbo"
path = "src/main.rs"

[dependencies]
rust_xlsxwriter = { version = "0.93", features = ["constant_memory"] }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }
chrono = "0.4"
rayon = "1.10"
indexmap = "2.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
