[package]
name = "xlsxturbo"
version = "0.12.5"
edition = "2021"
description = "High-performance Excel writer with automatic type detection (pandas, polars, CSV)"
license = "MIT"
repository = "https://github.com/tstone-1/xlsxturbo"
keywords = ["excel", "xlsx", "csv", "converter", "performance"]
categories = ["command-line-utilities", "encoding"]

[lib]
name = "xlsxturbo"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "xlsxturbo"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rust_xlsxwriter = { version = "0.94", features = ["constant_memory"] }
csv = "1.4"
clap = { version = "4.6", features = ["derive"], optional = true }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
chrono = "0.4"
rayon = "1.12"
indexmap = "2.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
