[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "xlsxturbo"
version = "0.7.0"
description = "High-performance Excel writer with automatic type detection (pandas, polars, CSV)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["excel", "xlsx", "csv", "converter", "performance", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tstone-1/xlsxturbo"
Repository = "https://github.com/tstone-1/xlsxturbo"
Issues = "https://github.com/tstone-1/xlsxturbo/issues"

[project.optional-dependencies]
dev = ["pytest", "pandas", "polars", "openpyxl"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "xlsxturbo"
